fjord-compiler/test/errors/polymorphism/InconsistentApply.fj
module errors.parametricPolymorhpism.InconsistentApply

second : a => a -> a -* a
second x y =
  y

five : Int
five = 
  second "hello" 5
